add signin signup signout mypage main

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
   <header>
     <%= link_to("TOP", "/") %>
+    <%= link_to("Twitterで登録", "/user/signup") %>
+    <%= link_to("サインイン", "/user/signin") %>
+    <%= link_to("@[username]", "/user/mypage") %>
+    <%= link_to("スタンプを押す", "/user/main") %>
+    <%= link_to("サインアウト", "/user/signout") %>
     <%= link_to("About", "/about") %>
   </header>
   <body>
