--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,16 @@
  *= require_tree .
  *= require_self
  */
+#logo {
+
+}
+
+header {
+  background-color: #66cdaa;
+  margin:0;
+}
+
+footer {
+  background-color: #000;
+  color : #fff;
+}
