--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,23 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <header>
+    <div>
+      logo
+    </div>
     <%= link_to("TOP", "/") %>
     <%= link_to("Twitterで登録", "/user/signup") %>
     <%= link_to("サインイン", "/user/signin") %>
     <%= link_to("@[username]", "/user/mypage") %>
     <%= link_to("スタンプを押す", "/user/main") %>
     <%= link_to("サインアウト", "/user/signout") %>
-    <%= link_to("About", "/about") %>
   </header>
   <body>
     <%= yield %>
   </body>
+  <footer>
+  <%= link_to("About us", "/about") %>
+  <div id="copy_light">
+    <p>Yuto Tachibana, Kenki Seki © 2018</p>
+  </div>
+  </footer>
 </html>
