--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,15 +3,21 @@
   <head>
     <title>Incrude</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="./assets/stylesheets/bootstrap.min.css" rel="stylesheet">
   </head>
   <header>
     <div>
       logo
     </div>
     <%= link_to("TOP", "/") %>
+    <%= link_to("@[username]", "/user/mypage") %>
+    <%= link_to("スタンプを押す", "/user/main") %>
+    <br>
+    <button type="button" class="btn btn-info text-right" onclick="location.href='/user/signup'">Twitterで登録</button>
+    <button type="button" class="btn btn-primary text-right" onclick="location.href='/user/signin'">サインイン</button>
+    <button type="button" class="btn btn-warning" onclick="location.href='/user/signout'">サインアウト</button>
     <%= link_to("Twitterで登録", "/user/signup") %>
     <%= link_to("サインイン", "/user/signin") %>
     <%= link_to("@[username]", "/user/mypage") %>
@@ -24,7 +30,7 @@
   <footer>
   <%= link_to("About us", "/about") %>
   <div id="copy_light">
-    <p>Yuto Tachibana, Kenki Seki © 2018</p>
+    <p class="text-right"><small>Yuto Tachibana, Kenki Seki &copy; 2018</small></p>
   </div>
   </footer>
 </html>
