--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -1,2 +1,7 @@
 <h1>User#mypage</h1>
 <p>Find me in app/views/user/mypage.html.erb</p>
+
+<p>uid:<%= @current_user.uid %></p>
+<p>count:<%= @current_user.count %></p>
+<p>name:<%= @current_user.name %></p>
+<p>image:<%= @current_user.image %></p>
