--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -4,4 +4,4 @@
 <p>uid:<%= @current_user.uid %></p>
 <p>count:<%= @current_user.count %></p>
 <p>name:<%= @current_user.name %></p>
-<p>image:<%= @current_user.image %></p>
+<p>image:</p><img src= <%= @current_user.image %> >
