--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -3,5 +3,6 @@
 
 <p>uid:<%= @current_user.uid %></p>
 <p>count:<%= @current_user.count %></p>
+<p>ID:@<%= @current_user.twitter_id %></p>
 <p>name:<%= @current_user.name %></p>
 <p>image:</p><img src= <%= @current_user.image %> >
