--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   </head>
 
   <header>
-    <div class="text-right">
-      logo
+    <div class="text-left">
+      <%= image_tag('incrudelogo.png', :size => '200x53') %>
     </div>
     <% if session[:user_id] %>
       <button type="button" class="btn btn-danger text-right" onclick="location.href='/user/mypage'">@<%= @current_user.twitter_id %></button>
