bottun float right magin-top8px

--- a/app/assets/stylesheets/flat-ui.css
+++ b/app/assets/stylesheets/flat-ui.css
@@ -2518,7 +2518,7 @@ fieldset[disabled] .input-group-btn .btn-default.active {
 .ui-slider-value {
   float: right;
   font-size: 13px;
-  margin-top: 12px;
+  /*margin-top: 5px;*/
 }
 
 .ui-slider-value.first {
