--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,32 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+
+<!-- キャッチフレーズはじめ -->
+<div class="catchphrase">
+  <div class="catchphrase_main"><p class="catchphrase_main">労働のよろこびを感じよう</p></div>
+  <p class="catchphrase_sub">1日1回、労働後はincrudeで労働スタンプを押しましょう<br>
+  あなたの会社が良くなる様をフォロワーにシェアできます</p>
+  <button type="button" class="btn btn-primary btn-lg start_button">今すぐはじめる</button>
+</div>
+<!-- キャッチフレーズ終わり -->
+<!-- 使い方はじめ -->
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-2 description">
+      <p>Step.1</p>
+      <p>労働のよろこびを感じます</p>
+    </div>
+    <div class="col-sm-2 description">
+      <p>Step.2</p>
+      <p>Twitterでサインインします</p>
+    </div>
+    <div class="col-sm-2 description">
+      <p>Step.3</p>
+      <p>チカラを込めてスタンプを押します</p>
+    </div>
+    <div class="col-sm-2 description">
+      <p>Step.4</p>
+      <p>あなたの労働環境が改善されます</p>
+    </div>
+  </div>
+</div>
+<!-- 使いかた終わり -->
+
