--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.catchphrase {
+  background-image: url("catchphrase.png");
+  background-size: cover;
+  text-align: center;
+}
+
+div.catchphrase_main {
+  padding: 15px;
+}
+
+p.catchphrase_main {
+  color: #fff;
+  font-size:40px;
+}
+
+p.catchphrase_sub {
+  color: #fff;
+  font-size: 14px;
+}
+
+.start_button {
+  margin: 0px 0px 40px;
+}
+
+.description {
+  text-align: center;
+  background-color:#f0f0f0;
+  text-align: center;
+  margin: 10px;
+}
