--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -26,9 +26,52 @@ p.catchphrase_sub {
   margin: 0px 0px 40px;
 }
 
+.desctiption_parent {
+  margin: 20px;
+}
+
 .description {
+  border-radius: 20px;
+  border: 8px white solid;
   text-align: center;
   background-color:#f0f0f0;
   text-align: center;
-  margin: 10px;
+  padding: 10px;
+}
+
+.description_text {
+  font-size: 14px;
+}
+
+.destroy {
+  border-radius: 20px;
+  border: 8px white solid;
+  text-align: center;
+  background-color:#ffccff;
+  text-align: center;
+  padding: 10px;
+}
+
+.sum_count {
+  border-radius: 50%;
+  height: 220px;
+  width: 220px;
+  margin: 30px;
+  font-size: 50px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.background_green {
+  background-color: #00947a;
+}
+
+.background_violet {
+  background-color: #4d4398;
+}
+
+.background_salmon {
+  background-color: #ff8989;
 }
