remove socket config fron database.yml

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,16 +13,18 @@
  *= require_tree .
  *= require_self
  */
-#logo {
-
-}
-#user_icon img {
-  border-radius: 50%;
-}
-
 header {
-  background-color: #66cdaa;
+  background-color: #fff;
   margin:0;
+  height: 80px
+}
+
+.logo {
+  margin: 10px 3px;
+}
+
+.page_button {
+  margin: 10px 3px;
 }
 
 footer {
