--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,22 +10,22 @@
 <!-- 使い方はじめ -->
 <div class="container-fluid desctiption_parent">
   <div class="row">
-    <div class="col-sm-3 description">
+    <div class="col-sm-3 description" style="background-color: #fcf9ff;">
       <p>Step.1</p>
       <%= image_tag('dummy.png', :size => '150x150') %><br>
       <span class="description_text">労働のよろこびを感じます</span>
     </div>
-    <div class="col-sm-3 description">
+    <div class="col-sm-3 description"  style="background-color: #f9f4ff;">
       <p>Step.2</p>
       <%= image_tag('dummy.png', :size => '150x150') %><br>
       <span class="description_text">Twitterでサインインします</span>
     </div>
-    <div class="col-sm-3 description">
+    <div class="col-sm-3 description" style="background-color: #f7efff;">
       <p>Step.3</p>
       <%= image_tag('dummy.png', :size => '150x150') %><br>
       <span class="description_text">チカラを込めてスタンプを押します</span>
     </div>
-    <div class="col-sm-3 description">
+    <div class="col-sm-3 description"  style="background-color: #f4eaff;">
       <p>Step.4</p>
       <%= image_tag('dummy.png', :size => '150x150') %><br>
       <span class="description_text">あなたの労働環境が改善されます</span>
