--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,23 +10,21 @@
   </head>
 
   <header>
-    <div class="text-left">
-      <%= image_tag('incrudelogo.png', :size => '200x53') %>
+    <div class="text-left logo">
+      <%= image_tag('incrudelogo.png', :size => '300x75') %>
     <% if session[:user_id] %>
     <div class="ui-slider-value">
-      <button type="button" class="btn btn-danger pull-right" onclick="location.href='/user/mypage'">@<%= @current_user.twitter_id %></button>
-      <button type="button" class="btn btn-info pull-right" onclick="location.href='/user/main'">スタンプを押す</button>
-      <button type="button" class="btn btn-warning pull-right" onclick="location.href='/user/signout'">サインアウト</button>
+      <button type="button" class="btn btn-danger pull-right page_button" onclick="location.href='/user/mypage'">@<%= @current_user.twitter_id %></button>
+      <button type="button" class="btn btn-info pull-right page_button" onclick="location.href='/user/main'">スタンプを押す</button>
+      <button type="button" class="btn btn-warning pull-right page_button" onclick="location.href='/user/signout'">サインアウト</button>
     </div>
     <% else %>
     <div class="ui-slider-value">
-      <button type="button" class="btn btn-primary c" onclick="location.href='/auth/twitter'">Twitterでサインイン</button>
+      <button type="button" class="btn btn-primary text-right" onclick="location.href='/auth/twitter'">Twitterでサインイン</button>
     </div>
     </div>
     <% end %>
     <div class="clear"></div>
-    <!-- <div class="text-left"> -->
-    <!-- </div> -->
   </header>
 
   <body>
