--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -27,14 +27,12 @@ p.catchphrase_sub {
 }
 
 .desctiption_parent {
-  margin: 20px;
+  margin: 40px 0 60px;
 }
 
 .description {
   border-radius: 20px;
   border: 8px white solid;
-  text-align: center;
-  background-color:#f0f0f0;
   text-align: center;
   padding: 10px;
 }
@@ -43,11 +41,12 @@ p.catchphrase_sub {
   font-size: 14px;
 }
 
+.destroy_parent {
+  margin: 60px 0 60px;
+}
+
 .destroy {
-  border-radius: 20px;
   border: 8px white solid;
-  text-align: center;
-  background-color:#ffccff;
   text-align: center;
   padding: 10px;
 }
@@ -62,6 +61,7 @@ p.catchphrase_sub {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 5px auto;
 }
 
 .background_green {
