--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -1,10 +1,16 @@
-<h1>User#mypage</h1>
-<p>Find me in app/views/user/mypage.html.erb</p>
-
-
-↓ユーザ情報　これをいい感じに使ってビューを作る
-<p>uid:<%= @current_user.uid %></p>
-<p>count:<%= @current_user.count %></p>
-<p>ID:@<%= @current_user.twitter_id %></p>
-<p>name:<%= @current_user.name %></p>
-<p>image:</p><img src= "<%= @current_user.image %>" class="user_icon" >
+<h1>mypage</h1>
+<div class="row">
+  <div class="col-sm-4 text-left">
+    <img src= "<%= @current_user.image %>" class="user_icon" width="50" height="50">
+    <p>ID:@<%= @current_user.twitter_id %></p>
+    <p>uid:<%= @current_user.uid %></p>
+    <p>name:<%= @current_user.name %></p>
+  </div>
+  <div class="col-sm-8 text-left h2">
+    <p>あなたは出勤日数count:<%= @current_user.count %>日目です！</p>
+  </div>
+</div>
+<div class="text-right">
+  <button type="button" class="btn btn-info" onclick="location.href=''">あなたのがんばりをシェア</button>
+  <button type="button" class="btn btn-info" onclick="location.href=''">リセット(労働日数を)</button>
+</div>
