--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,7 @@
   <div class="row">
     <div class="col-sm-4 destroy">
       <p>みんなが労働した日数</p>
-      <div class="sum_count background_green">1234日</div>
+      <div class="sum_count background_green"><%= @sumCount %>日</div>
     </div>
     <div class="col-sm-4 destroy">
       <p>みんなが倒した上司や同僚の人数</p>
