bugfix mypage.html.erb

--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -18,4 +18,4 @@
 <p>昨日したこと: <%= @work_msg %></p>
 <p>昨日したことサブ: <%= @work_msg_sub %></p>
 
-<%= link_to(“リセットするやつ“,”/user/reset”, :method => :post) %>
+<%= link_to("リセットするやつ","/user/reset", :method => :post) %>
