--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -1,7 +1,7 @@
 <h1>mypage</h1>
 <div class="row">
   <div class="col-sm-4 text-left">
-    <img src= "<%= @current_user.image %>" class="user_icon" width="50" height="50">
+    <img src= "<%= @current_user.image %>" class="user_img" width="150" height="150">
     <p>ID:@<%= @current_user.twitter_id %></p>
     <p>uid:<%= @current_user.uid %></p>
     <p>name:<%= @current_user.name %></p>
