--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -44,11 +44,11 @@
     </div>
     <div class="col-sm-4 destroy">
       <p>みんなが倒した上司や同僚の人数</p>
-      <div class="sum_count background_violet">1234人</div>
+      <div class="sum_count background_violet"><%= @sumKill %>人</div>
     </div>
     <div class="col-sm-4 destroy">
       <p>みんなが会社を破壊した回数</p>
-      <div class="sum_count background_salmon">1234回</div>
+      <div class="sum_count background_salmon"><%= @sumBomb %>回</div>
     </div>
   </div>
 </div>
