--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -1,21 +1,27 @@
-<h1>mypage</h1>
 <div class="row">
-  <div class="col-sm-4 text-left">
+  <div class="col-sm-4 text-center">
+    <h1><%= @current_user.name %></h1>
     <img src= "<%= @current_user.image %>" class="user_img" width="150" height="150">
     <p>ID:@<%= @current_user.twitter_id %></p>
-    <p>uid:<%= @current_user.uid %></p>
-    <p>name:<%= @current_user.name %></p>
   </div>
-  <div class="col-sm-8 text-left h2">
-    <p>あなたは出勤日数count:<%= @current_user.count %>日目です！</p>
+  <div class="col-sm-8 text-left">
+    <div>
+      <h1><br></h1>
+    </div>
+    <p class="font_forcus">
+      あなたは出勤日数count:<%= @current_user.count %>日目です！
+    </p>
+      <p>
+        昨日したこと: <%= @work_msg %><br>
+        昨日したことサブ: <%= @work_msg_sub %>
+      </p>
+    </font>
   </div>
 </div>
 <div class="text-right">
-  <button type="button" class="btn btn-info" onclick="location.href=''">あなたのがんばりをシェア</button>
-  <button type="button" class="btn btn-info" onclick="location.href=''">リセット(労働日数を)</button>
+  <button type="button" class="btn btn-info mypage_button" onclick="location.href=''">あなたのがんばりをシェア</button>
+  <br>
+  <button type="button" class="btn btn-danger mypage_button" onclick="location.href=''">リセット(労働日数をリセット)</button>
 </div>
-
-<p>昨日したこと: <%= @work_msg %></p>
-<p>昨日したことサブ: <%= @work_msg_sub %></p>
 
 <%= link_to("リセットするやつ","/user/reset", :method => :post) %>
