--- a/app/views/user/main.html.erb
+++ b/app/views/user/main.html.erb
@@ -11,4 +11,4 @@
 <p>昨日したこと：<%= @work_msg %></p>
 <p>昨日したことサブ：<%= @work_msg_sub %></p>
 
-<%= link_to("労働カウント このリンクをスタンプっぽくして","/user/count", :method => :post) %>
+<%= link_to image_tag("stamp.png"), "/user/count", :method => :post %>
