--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -13,5 +13,41 @@
 
 .font_forcus {
   font-size: 2.0rem;
-  font-weight:bold;
+  font-weight: bold;
+}
+
+.stamp_description {
+  margin: 40px;
+}
+
+.stamp_description_main {
+  font-size: 30px;
+  margin: 20px;
+}
+
+.stamp_description_sub {
+  font-size: 20px;
+  margin: auto 40px;
+}
+
+.stamp {
+  background-color: #e8e8e8;
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  margin: auto ;
+  line-height: 300px;
+  position: relative;
+}
+
+.stamp_image {
+  vertical-align:middle;
+}
+
+.stamp_push {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  margin-bottom: 40px;
+  font-size: 12px;
 }
