--- a/app/views/user/main.html.erb
+++ b/app/views/user/main.html.erb
@@ -11,6 +11,7 @@
 </div>
 
 <div class="stamp">
-  <span class="stamp_image"><%= link_to image_tag("stamp.png"), "/user/count", :method => :post %></span>
+   <span class="stamp_image"><%= link_to image_tag("stamp.png"), "/user/count", :method => :post %></span>
+  <!-- <div class="float-center"><a href="/user/count"><img src= "roudou.png" class="user_img" width="300" height="300"></a></div> -->
 </div>
 <span class="stamp_push">今日も頑張った方は、スタンプを押してください</span>
