--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -5,6 +5,7 @@
 
 .user_img {
   border-radius: 50%;
+  margin: 20px;
 }
 
 .mypage_button {
@@ -50,4 +51,16 @@
   text-align: center;
   margin-bottom: 40px;
   font-size: 12px;
+}
+
+.twitter_id {
+  width: 400px;
+  background-color:#409ecc;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+  color: #fff;
+  font-size: 14px;
+  margin: 0 auto;
 }
