--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,12 +30,9 @@ header {
 .flash {
   width: 400px;
   background-color:#409ecc;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
+  border-radius: 12px;
   color: #fff;
-  font-size: 14px;
+  font-size: 10px;
   margin: 0 auto;
 }
 
