--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,6 +6,7 @@
   background-image: url("catchphrase.png");
   background-size: cover;
   text-align: center;
+  padding: 20px 0 40px;
 }
 
 div.catchphrase_main {
@@ -23,7 +24,7 @@ p.catchphrase_sub {
 }
 
 .start_button {
-  margin: 0px 0px 40px;
+  margin: 40px;
 }
 
 .desctiption_parent {
