--- a/app/views/user/main.html.erb
+++ b/app/views/user/main.html.erb
@@ -9,9 +9,9 @@
     <span class="stamp_description_sub">スタンプを押して、労働のよろこびを共有しましょう！</span>
   <% end %>
 </div>
-
 <div class="stamp">
-   <span class="stamp_image"><%= link_to image_tag("stamp.png"), "/user/count", :method => :post %></span>
+   <%= link_to "", "/user/count", :class => "stamp_image", :method => :post %>
+   <!-- <%= image_tag("roudou.png", :class => "stamp_hover") %> -->
   <!-- <div class="float-center"><a href="/user/count"><img src= "roudou.png" class="user_img" width="300" height="300"></a></div> -->
 </div>
 <span class="stamp_push">今日も頑張った方は、スタンプを押してください</span>
