implemente modal to main.html.erb

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -36,8 +36,8 @@
   border-radius: 50%;
   height: 250px;
   width: 250px;
-  margin: auto ;
-  line-height: 300px;
+  margin: auto;
+  // line-height: 300px;
   position: relative;
 }
 
