--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
 <!-- キャッチフレーズはじめ -->
 <div class="catchphrase">
   <div class="catchphrase_main"><p class="catchphrase_main">労働のよろこびを感じよう</p></div>
-  <p class="catchphrase_sub">1日1回、労働後はincrudeで労働スタンプを押して、<br>
+  <p class="catchphrase_sub">1日1回、労働後はincRudeで労働スタンプを押して、<br>
   あなたの会社が良くなる様をフォロワーにシェアしましょう</p>
   <button type="button" class="btn btn-primary btn-lg start_button" onclick="location.href='/auth/twitter'">今すぐはじめる</button>
 </div>
