--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -14,7 +14,7 @@
       労働スタンプは<%= @current_user.count %>回押されています。
     </p>
       <p>
-        <%= @work_msg %><br>
+        あなたは前回の労働で、<%= @work_msg %><br>
         <%= @work_msg_sub %>
       </p>
     </font>
