--- a/app/views/user/main.html.erb
+++ b/app/views/user/main.html.erb
@@ -2,16 +2,38 @@
 <div class="stamp_description">
   <% if @current_user.count > 0 %>
     <span class="stamp_description_main">現在<strong><%= @current_user.count %>個</strong>の労働スタンプが押されています！</span><br>
-    <span class="stamp_description_sub"><%= @work_msg %></span><br>
+    <span class="stamp_description_sub">あなたは前回の労働で、<%= @work_msg %></span><br>
     <span class="stamp_description_sub"><%= @work_msg_sub %></span>
   <% else %>
     <span class="stamp_description_main">まだあなたは労働スタンプを押していません。</span><br>
     <span class="stamp_description_sub">スタンプを押して、労働のよろこびを共有しましょう！</span>
   <% end %>
 </div>
+
 <div class="stamp">
-   <%= link_to "", "/user/count", :class => "stamp_image", :method => :post %>
-   <!-- <%= image_tag("roudou.png", :class => "stamp_hover") %> -->
-  <!-- <div class="float-center"><a href="/user/count"><img src= "roudou.png" class="user_img" width="300" height="300"></a></div> -->
+   <%= link_to '', '', :class => "stamp_image", data: {toggle: "modal", target: "#exampleModalCenter"} %>
+
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">
+            <% @current_user.count += 1 %>
+            <strong><%= @current_user.count %>日目</strong>の労働お疲れ様です！</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <%= @work_msg %>
+          <%= @work_msg_sub %>
+        </div>
+        <div class="modal-footer">
+          <%= link_to "確定", "/user/reset", class: 'btn btn-danger', :method => :post %>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
 <span class="stamp_push">今日も頑張った方は、スタンプを押してください</span>
