About us format & application button possition

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,2 +1,23 @@
-<h1>Home#about</h1>
-<p>Find me in app/views/home/about.html.erb</p>
+<h1>About us</h1>
+<p>Find me in CK-tech</p>
+<div class="text-center">
+  <%= image_tag('dummy.png', :size => '150x150') %>
+  <div style="font-size:x-large;">
+    Yuto Tachibana
+  </div>
+  <div>
+    dammy!
+  </div>
+</div>
+
+<div class="user-margin"></div>
+
+<div class="text-center">
+  <%= image_tag('dummy.png', :size => '150x150') %>
+  <div style="font-size:x-large;">
+    Kenki Seki
+  </div>
+  <div>
+    dammy!
+  </div>
+</div>
