--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,10 @@
     <div class="text-left logo">
       <a href="/"><%= image_tag('incrudelogo.png', :size => '300x75') %></a>
   <% if session[:user_id] %>
-    <div class="ui-slider-value">
-      <button type="button" class="btn btn-danger pull-right page_button" onclick="location.href='/user/mypage'">@<%= @current_user.twitter_id %></button>
-      <button type="button" class="btn btn-info pull-right page_button" onclick="location.href='/user/main'">スタンプを押す</button>
-      <button type="button" class="btn btn-warning pull-right page_button" onclick="location.href='/user/signout'">サインアウト</button>
+    <div class="ui-slider-value pull-right">
+      <button type="button" class="btn btn-default page_button" onclick="location.href='/user/mypage'">@<%= @current_user.twitter_id %></button>
+      <button type="button" class="btn btn-info page_button" onclick="location.href='/user/main'">スタンプを押す</button>
+      <button type="button" class="btn btn-danger page_button" onclick="location.href='/user/signout'">サインアウト</button>
     </div>
   <% else %>
     <div class="ui-slider-value">
