--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -76,3 +76,9 @@ p.catchphrase_sub {
 .background_salmon {
   background-color: #ff8989;
 }
+
+.about_title {
+  padding: 5px;
+  background-color: #409ecc;
+  color: #fff;
+}
