--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,12 +1,18 @@
-<h1>About us</h1>
-<p>Find me in CK-tech</p>
+<h3 class="about_title">About Us</h3>
+<p style="margin: 5px 0 30px;">
+  dammydammydammydammydammydammydammydammydammydammydammy<br>
+  dammydammydammydammydammydammydammydammydammydammydammydammydammydammy<br>
+  dammydammydammydammydammydammy
+</p>
 <div class="text-center">
   <%= image_tag('dummy.png', :size => '150x150') %>
   <div style="font-size:x-large;">
     Yuto Tachibana
   </div>
-  <div>
-    dammy!
+  <div style="margin-bottom: 100px;">
+    dammydammydammydammydammydammydammydammydammydammydammy<br>
+    dammydammydammydammydammydammydammydammydammydammydammydammydammydammy<br>
+    dammydammydammydammydammydammy
   </div>
 </div>
 
@@ -17,7 +23,9 @@
   <div style="font-size:x-large;">
     Kenki Seki
   </div>
-  <div>
-    dammy!
+  <div style="margin-bottom: 100px;">
+    dammydammydammydammydammydammydammydammydammydammydammy<br>
+    dammydammydammydammydammydammydammydammydammydammydammydammydammydammy<br>
+    dammydammydammydammydammydammy
   </div>
 </div>
