--- a/app/views/user/main.html.erb
+++ b/app/views/user/main.html.erb
@@ -29,7 +29,7 @@
           <%= @work_msg_sub %>
         </div>
         <div class="modal-footer">
-          <%= link_to "確定", "/user/reset", class: 'btn btn-danger', :method => :post %>
+          <%= link_to "確定", "/user/count", class: 'btn btn-danger', :method => :post %>
         </div>
       </div>
     </div>
