--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -11,13 +11,14 @@
       <h1><br></h1>
     </div>
     <p class="font_forcus">
-      労働スタンプは<%= @current_user.count %>回押されています。
-    </p>
-      <p>
-        あなたは前回の労働で、<%= @work_msg %><br>
-        <%= @work_msg_sub %>
-      </p>
-    </font>
+      労働スタンプは<%= @current_user.count %>回押されています。</p>
+      <% if @current_user.count > 0 %>
+        <p>あなたは前回の労働で、<%= @work_msg %><br>
+      <%= @work_msg_sub %></p>
+      <% else %>
+        <p>まだあなたは労働スタンプを押していません。<br>
+        スタンプを押して、労働のよろこびを共有しましょう！</p>
+      <% end %>
   </div>
 </div>
 <div class="text-right">
