--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -42,7 +42,7 @@
 }
 
 .stamp_image {
-  margin: auto auto auto auto;
+  margin: auto;
   display: block;
   width: 100%;
   height: 100%;
@@ -90,4 +90,28 @@
 
 .user-margin {
   margin: 30px;
+}
+
+.modal_block {
+  margin: auto;
+  text-align: center;
+}
+
+.modal_icon {
+  display: inline-block;
+  height: 180px;
+  width: 180px;
+  margin: 10px;
+}
+
+.modal_main {
+  display: inline-block;
+  font-size: 20px;
+  margin: 10px;
+}
+
+.modal_sub {
+  display: inline-block;
+  font-size: 16px;
+  margin: 10px;
 }
