--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,11 +45,10 @@
   </body>
 
   <footer>
-  <%= link_to("About us", "/about") %>
-  <p class="text-center">
-  <%= image_tag('twitter.png', :size => '24x24') %><!--
-  <a href="https://www.google.com"><img src="twitter.png" alt="twitter_freeicon"></a>  -->
-  </p>
+    <div class="text-center">
+      <p><%= image_tag('twitter.png', :size => '24x24') %></p>
+      <div style="font-size:large; color: #ffffff"><%= link_to("About us", "/about") %></div>
+    </div>
   <div id="copy_light">
     <p class="text-center"><small>Yuto Tachibana, Kenki Seki &copy; 2018</small></p>
   </div>
