--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,4 +1,4 @@
-<h3 class="about_title">About Us</h3>
+<h3 class="about_title text-center">About Us</h3>
 <p style="margin: 5px 0 30px;">
   dammydammydammydammydammydammydammydammydammydammydammy<br>
   dammydammydammydammydammydammydammydammydammydammydammydammydammydammy<br>
