--- a/app/views/user/main.html.erb
+++ b/app/views/user/main.html.erb
@@ -27,7 +27,7 @@
         <div class="modal-body modal_block">
           <% if @current_user.count == 1 %>
             <p class="modal_main"><%= @work_state1 %></p><br>
-            <%= image_tag("dummy.png", class: 'modal_icon') %><br>
+            <%= image_tag("work_state1.png", class: 'modal_icon') %><br>
             <p class="modal_sub"><%= @work_state1_sub %></p>
 
           <% elsif @current_user.count == 2 %>
