--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,8 @@
 
   <footer>
     <div class="text-center">
-      <p><%= image_tag('twitter.png', :size => '24x24') %></p>
+      <br>
+      <p style="margin: 30px 0px 10px;"><%= image_tag('twitter.png', :size => '24x24') %></p>
       <div style="font-size:large; color: #ffffff"><%= link_to("About us", "/about") %></div>
     </div>
   <div id="copy_light">
