--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -38,6 +38,12 @@ p.catchphrase_sub {
   padding: 10px;
 }
 
+.description_image {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+}
+
 .description_text {
   font-size: 14px;
 }
