--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,23 +12,23 @@
   <div class="row">
     <div class="col-sm-3 description" style="background-color: #fcf9ff;">
       <p>Step.1</p>
-      <%= image_tag('dummy.png', :size => '150x150') %><br>
-      <span class="description_text">労働のよろこびを感じます</span>
+      <%= image_tag('description1.png', :class => "description_image") %><br>
+      <span class="description_text">労働します</span>
     </div>
     <div class="col-sm-3 description"  style="background-color: #f9f4ff;">
       <p>Step.2</p>
-      <%= image_tag('dummy.png', :size => '150x150') %><br>
-      <span class="description_text">Twitterでサインインします</span>
+      <%= image_tag('description2.png', :class => "description_image") %><br>
+      <span class="description_text">スタンプを押して邪魔なものを排除します</span>
     </div>
     <div class="col-sm-3 description" style="background-color: #f7efff;">
       <p>Step.3</p>
-      <%= image_tag('dummy.png', :size => '150x150') %><br>
-      <span class="description_text">チカラを込めてスタンプを押します</span>
+      <%= image_tag('description3.png', :class => "description_image") %><br>
+      <span class="description_text">労働環境が改善されます</span>
     </div>
     <div class="col-sm-3 description"  style="background-color: #f4eaff;">
       <p>Step.4</p>
-      <%= image_tag('dummy.png', :size => '150x150') %><br>
-      <span class="description_text">あなたの労働環境が改善されます</span>
+      <%= image_tag('description4.png', :class => "description_image") %><br>
+      <span class="description_text">7日間の労働で会社を爆破できます！</span>
     </div>
   </div>
 </div>
