--- a/app/views/user/main.html.erb
+++ b/app/views/user/main.html.erb
@@ -32,7 +32,7 @@
 
           <% elsif @current_user.count == 2 %>
             <p class="modal_main"><%= @work_state2 %></p><br>
-            <%= image_tag("dummy.png", class: 'modal_icon') %><br>
+            <%= image_tag("work_state2.png", class: 'modal_icon') %><br>
             <p class="modal_sub"><%= @work_state2_sub %></p>
 
           <% elsif @current_user.count == 3 %>
