--- a/app/views/user/mypage.html.erb
+++ b/app/views/user/mypage.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center">
     <!-- <h3 class="bg-info" style="padding: 5px;"><%= @current_user.name %></h3> -->
     <h3 class="about_title"><%= @current_user.name %></h3>
-    <img src= "<%= @current_user.image %>" class="user_img" width="150" height="150">
+    <img src= "<%= @current_user.image %>" class="user_img" width="100" height="100">
     <div class="twitter_id text-center">
       <p>@<%= @current_user.twitter_id %></p>
     </div>
@@ -11,9 +11,9 @@
   <p class="font_forcus">
     労働スタンプは<%= @current_user.count %>回押されています。
   </p>
-  <%= image_tag(@work_state_img, :size => '150x150') %>
+  <%= image_tag(@work_state_img, :size => '300x300') %>
   <% if @current_user.count > 0 %>
-    <p>あなたは前回の労働で、<%= @work_msg %><br>
+    <p style="font-size: 14px; margin:20px;">あなたは前回の労働で、<%= @work_msg %><br>
   <%= @work_msg_sub %></p>
   <% else %>
     <p>まだあなたは労働スタンプを押していません。<br>
